--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -147,7 +147,7 @@
     <script src="~/assets/js/custom.js"></script>
 
 
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         var no = 10;
         if (matchMedia('only screen and (max-width: 767px)').matches) {
             no = 10
@@ -232,7 +232,7 @@
             snowIE_NS6();
             if (hidesnowtime > 0) setTimeout('hidesnow()', hidesnowtime * 1000)
         }
-    </script>
+    </script>*@
 </body>
 
 <!-- index.html  21 Nov 2019 03:47:04 GMT -->
