Update code TimeLogin

--- a/MonthlyStatement/Views/Profile/Index.cshtml
+++ b/MonthlyStatement/Views/Profile/Index.cshtml
@@ -76,6 +76,21 @@
                                         </div>
                                     </div>
                                 </div>
+                                <hr class="mt-0 mb-4">
+                                <div class="row pt-1">
+                                    <div class="col-6 mb-3">
+                                        <h6>Đăng nhập lần cuối</h6>
+                                        <div class="text-muted">
+                                            <p class="text-muted mb-0">@Model.last_login.Value.ToString("dd/MM/yyyy HH:mm:ss")</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <h6>Đăng xuất lần cuối</h6>
+                                        <div class="text-muted">
+                                            <p class="text-muted mb-0">@Model.last_logout.Value.ToString("dd/MM/yyyy HH:mm:ss")</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
